[gd_scene load_steps=6 format=3 uid="uid://bf7oxbfueb17b"]

[ext_resource type="FontFile" uid="uid://hhsgalgbgosn" path="res://Assets/Fonts/AmaticSC-Bold.ttf" id="1_bttma"]
[ext_resource type="Script" path="res://Assets/Scripts/Archcomm_Dialog.gd" id="1_qbilv"]
[ext_resource type="JSON" path="res://Assets/Resources/Dialogue/dialogue.json" id="2_0gl4p"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="4_8pyfi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_juar3"]
bg_color = Color(0, 0, 0, 0.745098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ArchcommDialog" type="CanvasLayer"]
script = ExtResource("1_qbilv")
dialogue_json = ExtResource("2_0gl4p")

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -229.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="TextboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_juar3")

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TextboxContainer/MarginContainer"]
layout_mode = 2

[node name="Narration" type="Label" parent="TextboxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_bttma")
theme_override_font_sizes/font_size = 31

[node name="Continue" type="Label" parent="TextboxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "â–¼"
horizontal_alignment = 2
vertical_alignment = 2

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("4_8pyfi")

[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
